Set up coefficients for approashing the ball

--- a/Lightweight/Objects/Lightweight.htm
+++ b/Lightweight/Objects/Lightweight.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\Objects\Lightweight.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\Lightweight.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Dec 05 17:44:07 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Wed Dec 06 14:27:55 2023
 <BR><P>
-<H3>Maximum Stack Usage =       2656 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =       2520 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-__rt_entry_main &rArr; main &rArr; IRLocator::angleOffset(float, float) &rArr; __hardfp_pow &rArr; sqrt &rArr; _dsqrt &rArr; __fpl_dnaninf
+__rt_entry_main &rArr; main &rArr; Vec2b::update(Vec2b) &rArr; __hardfp_sin &rArr; __ieee754_rem_pio2 &rArr; __aeabi_d2iz
 <P>
 <H3>
 Functions with no stack information
@@ -244,8 +244,8 @@ Global Symbols
 <P><STRONG><a name="[135]"></a>__rt_entry_postsh_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$00000009))
 
 <P><STRONG><a name="[6a]"></a>__rt_entry_main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$0000000D))
-<BR><BR>[Stack]<UL><LI>Max Depth = 2656 + Unknown Stack Size
-<LI>Call Chain = __rt_entry_main &rArr; main &rArr; IRLocator::angleOffset(float, float) &rArr; __hardfp_pow &rArr; sqrt &rArr; _dsqrt &rArr; __fpl_dnaninf
+<BR><BR>[Stack]<UL><LI>Max Depth = 2520 + Unknown Stack Size
+<LI>Call Chain = __rt_entry_main &rArr; main &rArr; Vec2b::update(Vec2b) &rArr; __hardfp_sin &rArr; __ieee754_rem_pio2 &rArr; __aeabi_d2iz
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 <LI><a href="#[6c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;exit
@@ -573,7 +573,6 @@ Global Symbols
 <LI><a href="#[96]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;I2C::I2C(Pin&, Pin&)
 <LI><a href="#[d9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IRLocator::IRLocator(I2C&, unsigned)
 <LI><a href="#[83]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;omniplatform::omniplatform(Motor&, Motor&, Motor&, Motor&)
-<LI><a href="#[6b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[13a]"></a>__aeabi_memcpy8</STRONG> (Thumb, 0 bytes, Stack size 8 bytes, rt_memcpy_w.o(.text), UNUSED)
@@ -1156,8 +1155,8 @@ Global Symbols
 
 <P><STRONG><a name="[147]"></a>Motor::Motor__sub_object(Pin&, Pin&)</STRONG> (Thumb, 0 bytes, Stack size 16 bytes, motor.o(i._ZN5MotorC1ER3PinS1_), UNUSED)
 
-<P><STRONG><a name="[b4]"></a>Vec2b::update(Vec2b)</STRONG> (Thumb, 966 bytes, Stack size 96 bytes, main.o(i._ZN5Vec2b6updateES_))
-<BR><BR>[Stack]<UL><LI>Max Depth = 280<LI>Call Chain = Vec2b::update(Vec2b) &rArr; __hardfp_sin &rArr; __ieee754_rem_pio2 &rArr; __aeabi_d2iz
+<P><STRONG><a name="[b4]"></a>Vec2b::update(Vec2b)</STRONG> (Thumb, 870 bytes, Stack size 152 bytes, main.o(i._ZN5Vec2b6updateES_))
+<BR><BR>[Stack]<UL><LI>Max Depth = 336<LI>Call Chain = Vec2b::update(Vec2b) &rArr; __hardfp_sin &rArr; __ieee754_rem_pio2 &rArr; __aeabi_d2iz
 </UL>
 <BR>[Calls]<UL><LI><a href="#[b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__hardfp_sqrt
 <LI><a href="#[b6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__hardfp_sin
@@ -1673,8 +1672,8 @@ Global Symbols
 <LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__hardfp_atan2
 </UL>
 
-<P><STRONG><a name="[6b]"></a>main</STRONG> (Thumb, 1218 bytes, Stack size 2328 bytes, main.o(i.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 2656<LI>Call Chain = main &rArr; IRLocator::angleOffset(float, float) &rArr; __hardfp_pow &rArr; sqrt &rArr; _dsqrt &rArr; __fpl_dnaninf
+<P><STRONG><a name="[6b]"></a>main</STRONG> (Thumb, 1206 bytes, Stack size 2184 bytes, main.o(i.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 2520<LI>Call Chain = main &rArr; Vec2b::update(Vec2b) &rArr; __hardfp_sin &rArr; __ieee754_rem_pio2 &rArr; __aeabi_d2iz
 </UL>
 <BR>[Calls]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Motor::Motor(Pin&, Pin&)
 <LI><a href="#[96]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;I2C::I2C(Pin&, Pin&)
@@ -1702,7 +1701,6 @@ Global Symbols
 <LI><a href="#[b4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Vec2b::update(Vec2b)
 <LI><a href="#[7e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_f2d
 <LI><a href="#[80]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_d2f
-<LI><a href="#[84]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memcpy4
 </UL>
 <BR>[Called By]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
