--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -22,13 +22,47 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\PARK_HAYASTANIN\ASTERISK\Asterisk_team\Lightweight\Lightweight.uvprojx
-Project File Date:  01/10/2024
+Project File Date:  01/11/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-".\Objects\Lightweight.axf" - 0 Error(s), 0 Warning(s).
+compiling Processing_coord.cpp...
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+src\Processing_coord\Processing_coord.h(52): warning:  #1-D: last line of file ends without a newline
+  };
+src\Processing_coord\Processing_coord.cpp(68): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	_targetIMU = RAD2DEG * atan2(float(_x - ENEMY_X), float(_y - ENEMY_Y)) - 180;
+src\Processing_coord\Processing_coord.cpp(73): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	if (_x > GOAL_OUT_X_THRESHOLD) _targetIMU = RAD2DEG * atan2(float(_y), float(_x - GOAL_OUT_X_THRESHOLD));
+src\Processing_coord\Processing_coord.cpp(74): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	else if (_x < -GOAL_OUT_X_THRESHOLD) _targetIMU = RAD2DEG * atan2(float(_y), float(_x + GOAL_OUT_X_THRESHOLD));
+src\Processing_coord\Processing_coord.cpp(75): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	else _targetIMU = RAD2DEG * atan2(float(_y), float(_x));
+src\Processing_coord\Processing_coord.cpp(81): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	float ang = atan2(float(DIST_BETWEEN_GOALS - y), float(x)) * RAD2DEG;
+src\Processing_coord\Processing_coord.cpp(108): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		double speed = err * 0.0185; 
+src\Processing_coord\Processing_coord.cpp(111): warning:  #940-D: missing return statement at end of non-void function "ProcessingCoord::getVecToGoalCenter" 
+  }
+src\Processing_coord\Processing_coord.cpp(124): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		res.length = 0.1 * pow(abs(180 - float(angleBallGoal)), 2);
+src\Processing_coord\Processing_coord.cpp(127): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		res.length = 0.06 * pow(abs(180 - float(angleBallGoal)), 2);
+src\Processing_coord\Processing_coord.cpp(139): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	float ang = atan2(float(y), float(x)) * RAD2DEG;
+src\Processing_coord\Processing_coord.cpp(177): warning:  #1-D: last line of file ends without a newline
+  }
+src\Processing_coord\Processing_coord.cpp: 15 warnings, 0 errors
+linking...
+Program Size: Code=33874 RO-data=1426 RW-data=240 ZI-data=11536  
+".\Objects\Lightweight.axf" - 0 Error(s), 15 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,12 +88,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
