--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -35,7 +35,7 @@ compiling Processing_coord.cpp...
   #define FORWARD_ROLE 1
 .\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-src\Processing_coord\Processing_coord.h(52): warning:  #1-D: last line of file ends without a newline
+src\Processing_coord\Processing_coord.h(53): warning:  #1-D: last line of file ends without a newline
   };
 src\Processing_coord\Processing_coord.cpp(68): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	_targetIMU = RAD2DEG * atan2(float(_x - ENEMY_X), float(_y - ENEMY_Y)) - 180;
@@ -48,21 +48,127 @@ src\Processing_coord\Processing_coord.cpp(75): warning:  #1035-D: single-precisi
 src\Processing_coord\Processing_coord.cpp(81): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	float ang = atan2(float(DIST_BETWEEN_GOALS - y), float(x)) * RAD2DEG;
 src\Processing_coord\Processing_coord.cpp(108): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  		double speed = err * 0.0185; 
+  		double speed = err * 0.03; 
 src\Processing_coord\Processing_coord.cpp(111): warning:  #940-D: missing return statement at end of non-void function "ProcessingCoord::getVecToGoalCenter" 
   }
-src\Processing_coord\Processing_coord.cpp(124): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  		res.length = 0.1 * pow(abs(180 - float(angleBallGoal)), 2);
-src\Processing_coord\Processing_coord.cpp(127): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  		res.length = 0.06 * pow(abs(180 - float(angleBallGoal)), 2);
-src\Processing_coord\Processing_coord.cpp(139): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Processing_coord\Processing_coord.cpp(125): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		res.length = 0.006 * pow(abs(180 - float(angleBallGoal)), 1); //0.0015 2
+src\Processing_coord\Processing_coord.cpp(140): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	float ang = atan2(float(y), float(x)) * RAD2DEG;
-src\Processing_coord\Processing_coord.cpp(177): warning:  #1-D: last line of file ends without a newline
+src\Processing_coord\Processing_coord.cpp(178): warning:  #1-D: last line of file ends without a newline
   }
-src\Processing_coord\Processing_coord.cpp: 15 warnings, 0 errors
+src\Processing_coord\Processing_coord.cpp: 14 warnings, 0 errors
+compiling main.cpp...
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Pin\Pin.h(69): warning:  #1-D: last line of file ends without a newline
+  #endif /* PIN_H_ */
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\adc\adc.h(23): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\dma\dma.h(15): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\omniplatform\omniplatform.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\IMU_USART\IMU_USART.h(35): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
+  #define RAD2DEG	57.2957795130823208767f
+.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
+  #define DEG2RAD	0.017453292519943295769f
+.\src\OpenMV\OpenMV.h(35): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\TSOP\TSOP.h(5): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 9 of ".\src\OpenMV\OpenMV.h")
+  #define RAD2DEG	57.2957795130823208767
+.\src\TSOP\TSOP.h(6): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
+  #define DEG2RAD	0.01745329251994329576
+.\src\TSOP\TSOP.h(19): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\I2C\I2C.h(26): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\IR_Locator\IR_Locator.h(34): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+.\src\Queues_ball\Queues_ball.h(63): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Processing_coord\Processing_coord.h(53): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\libraries.h(25): warning:  #1-D: last line of file ends without a newline
+  #include "Vec2b.h"
+.\src\Robot\Robot.h(192): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp(18): warning:  #111-D: statement is unreachable
+  	return 0;
+src\main\main.cpp(19): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp: 53 warnings, 0 errors
 linking...
-Program Size: Code=33874 RO-data=1426 RW-data=240 ZI-data=11536  
-".\Objects\Lightweight.axf" - 0 Error(s), 15 Warning(s).
+Program Size: Code=34010 RO-data=1426 RW-data=248 ZI-data=11536  
+".\Objects\Lightweight.axf" - 0 Error(s), 67 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -88,10 +194,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
 </pre>
